# htmlify

./: .cache.sqlite  .gitignore  README.md  pyproject.toml  requirements.txt
data/: static-site-aliases.csv  static-sites.csv  vhosts.csv
data/assets/: style.css
data/crawl/: 127.0.0.1.yaml
data/sitemaps/: 127.0.0.1.yaml
htmlify/: cli.py  config.py  db.py  stack.py  url.py  utils.py
htmlify/htmlify/tasks/: sitemap.py
htmlify/tasks/: base.py  crawl.py  migrate.py  page.py  site.py  sitemap.py  sites_list.py
htmlify/tests/: test_crawl.py
